--- a/org.dreamland.whitefilter/pom.xml
+++ b/org.dreamland.whitefilter/pom.xml
@@ -24,7 +24,7 @@
 
     <groupId>org.dreamland</groupId>
     <artifactId>org.dreamland.whitefilter</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>bundle</packaging>
 
     <name>org.dreamland.whitefilter Bundle</name>
@@ -44,7 +44,7 @@
 	<dependency.felix.framework.version>5.6.10</dependency.felix.framework.version>
 	<dependency.osgi.version>6.0.0</dependency.osgi.version>
 	<dependency.paxweb.version>7.0.0</dependency.paxweb.version>
-		
+	<dependency.nimbus.version>5.8</dependency.nimbus.version>		
 	<!-- Plugins versions -->
 	<servlet.spec.groupId>javax.servlet</servlet.spec.groupId>
 	<servlet.spec.artifactId>javax.servlet-api</servlet.spec.artifactId>
@@ -92,10 +92,33 @@
         <dependency>
           <groupId>org.ops4j.pax.web</groupId>
           <artifactId>pax-web-api</artifactId>
-	  <version>${dependency.paxweb.version}</version>	  
-        </dependency>	
+	  <version>${dependency.paxweb.version}</version>
+	  <scope>provided</scope>
+        </dependency>
+	<!-- we need the compile scope to include these dependencies into the built JAR -->
+	<dependency>
+	  <groupId>com.nimbusds</groupId>
+	  <artifactId>nimbus-jose-jwt</artifactId>
+	  <version>${dependency.nimbus.version}</version>
+          <scope>compile</scope>	  
+	</dependency>
+	<dependency>
+	  <groupId>org.bouncycastle</groupId>
+	  <artifactId>bcprov-jdk15on</artifactId>
+	  <version>1.59</version>
+	</dependency>	
+	<dependency>
+	  <groupId>org.bouncycastle</groupId>
+	  <artifactId>bcpkix-jdk15on</artifactId>
+	  <version>1.59</version>
+	</dependency>	
+	<dependency>
+	  <groupId>junit</groupId>
+	  <artifactId>junit</artifactId>
+	  <version>3.8.1</version>
+	  </dependency>	
     </dependencies>
-
+    
     <build>
       <plugins>
 	<plugin>
@@ -116,16 +139,51 @@
               <Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
               <Bundle-Version>${project.version}</Bundle-Version>
               <Bundle-Activator>org.dreamland.whitefilter.Activator</Bundle-Activator>
-                        <Export-Package>
-                          org.dreamland.whitefilter*;version=${project.version}
-                        </Export-Package>
-                        <Import-Package>
-			  javax.servlet.*; version="2.5",
-                            *
-                        </Import-Package>
+              <Export-Package>
+                org.dreamland.whitefilter*;version=${project.version},
+              </Export-Package>
+              <Import-Package>
+		javax.servlet.*; version="2.5",
+                *
+              </Import-Package>	      
+	      <!-- <Private-Package>nimbus-jose-jwt</Private-Package> -->
+	      <Embed-Dependency>*;scope=compile|runtime;inline=true</Embed-Dependency>
+	      <Embed-Transitive>true</Embed-Transitive>
             </instructions>
           </configuration>
         </plugin>
+	<!-- <plugin> -->
+	<!--   <groupId>biz.aQute.bnd</groupId> -->
+	<!--   <artifactId>bnd-maven-plugin</artifactId> -->
+	<!--   <version>3.2.0</version> -->
+	<!--   <executions> -->
+	<!--     <execution> -->
+	<!--       <goals> -->
+	<!-- 	<goal>bnd-process</goal> -->
+	<!--       </goals> -->
+	<!--     </execution> -->
+	<!--   </executions> -->
+	<!--   <configuration> -->
+	<!--     <bnd><![CDATA[ -->
+	<!--     -exportcontents: ${packages;VERSIONED} -->
+	<!--     ]]></bnd> -->
+	<!--   </configuration> -->
+	<!-- </plugin> -->
+	
+      <!-- 	<plugin> -->
+      <!-- 	<artifactId>maven-assembly-plugin</artifactId> -->
+      <!-- 	<configuration> -->
+      <!-- 	  <archive> -->
+      <!-- 	    <manifest> -->
+      <!-- 	      <mainClass>fully.qualified.MainClass</mainClass> -->
+      <!-- 	    </manifest> -->
+      <!-- 	  </archive> -->
+      <!-- 	  <descriptorRefs> -->
+      <!-- 	    <descriptorRef>jar-with-dependencies</descriptorRef> -->
+      <!-- 	  </descriptorRefs> -->
+      <!-- 	</configuration> -->
+      <!-- </plugin> -->
+	
       </plugins>
     </build>
 
